[package]
name = "backend"
version = "0.1.0"
authors = ["Udit Karode <udit.karode@gmail.com>"]
edition = "2021"

[dependencies]
diesel = { version = "1.4.6", features = ["sqlite", "chrono", "r2d2"] }
uuid = { version = "0.8", features = ["v4"] }
slog-async = "2.4.0"
thiserror = "1.0.30"
slog-term = "2.5.0"
serde_json = "1.0"
dotenv = "0.15.0"
serde = "1.0.130"
actix-http = "2"
actix-web = "3"
chrono = "0.4"
slog = "2.7.0"