[package]
name = "backend"
version = "0.1.0"
authors = ["Udit Karode <udit.karode@gmail.com>"]
edition = "2021"

[dependencies]
libreauth = { version = "0.14.1", default-features = false, features = [ "key" ] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono", "r2d2"] }
uuid = { version = "0.8", features = ["v4"] }
rand_core = { version = "0.6", features = ["std"] }
slog-async = "2.7.0"
thiserror = "1.0.30"
slog-term = "2.8.0"
serde_json = "1.0"
futures = "0.3.18"
actix-service = "2.0.1"
dotenv = "0.15.0"
serde = "1.0.130"
actix-http = "2"
actix-web = "3"
actix-cors = "0.5"
chrono = "0.4"
pbkdf2 = "0.9"
slog = "2.7.0"
